--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:6cB0ZTKmKwUQHArmjE9N9A5i3plG8JlIhMFwtRPSRP4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
